vertex cover pt 2 (3 snart???)

--- a/DM553/Slides/Question4.tex
+++ b/DM553/Slides/Question4.tex
@@ -243,13 +243,13 @@
 		      \begin{itemize}
 			      \item Givet to mængder $A$ og $B$ og en funktion $f : A \rightarrow B$, så siger vi at:
 			      \item $f$ er \textit{injektiv} hvis den aldrig mapper to forskellige elementer til samme plads, altså $f(a) \ne f(b)$ hvis $a \ne b$.
-			      \item $f$ er \textit{bijektiv} hvis den rammer hvert element i $B$, altså for hvert $b \in B$ er der en $a \in A$ hvor $f(a) = b$.
+			      \item $f$ er \textit{surjektiv} hvis den rammer hvert element i $B$, altså for hvert $b \in B$ er der en $a \in A$ hvor $f(a) = b$.
 			      \item Vi siger at $A$ og $B$ er af ssamme størrelse hvis der er en funktion der både er injektiv og surjektiv, kaldet en korrespondance, eller \textit{bijektiv}.
 		      \end{itemize}
 		\item Uden at bruge for meget tid på det, husk tilbage til diskret matematik:
-		\item Alle positive heltal (naturlige tal) og komplekse tal (tal som er resultat fra en brøk) er \textit{tælleligt uendelige}. Alle mængder der er \textit{tælleligt uendelige} er bijektive til disse mængder.
+		\item Alle positive heltal (naturlige tal) og rationelle tal (tal som er resultat fra en brøk) er \textit{tælleligt uendelige}. Alle mængder der er \textit{tælleligt uendelige} er bijektive til disse mængder.
 		\item Nogle mængder er ikke tælleligt uendelige, men er stadig uendelige, såsom alle reelle tal. Disse siges at være \textit{overtællelige}.
-		\item VI kan ikke vise en bijektion mellem mængden af naturlige tal og mængden af reelle tal.
+		\item Vi kan ikke vise en bijektion mellem mængden af naturlige tal og mængden af reelle tal.
 		\item Der er overtælleligt mange sprog, men tælleligt mange Turingmaskine. Ud fra dertte i sig selv, kan vi deducere at der eksisterer sprog som ikke er Turing-genkendelige.
 	\end{itemize}
 
@@ -324,7 +324,7 @@
 	\end{itemize}
 
 	\begin{corollary}
-		$\overline{A_{TM}}$ er Turing-genkendeligt.
+		$\overline{A_{TM}}$ er ikke Turing-genkendeligt.
 	\end{corollary}
 
 	\begin{itemize}
