--- a/DM553/Slides/Question2.tex
+++ b/DM553/Slides/Question2.tex
@@ -157,9 +157,9 @@
 	\end{enumerate}
 \end{frame}
 
-
-\frametitle{CFG Konverting Eksempel}
-Vi kigger på eksempel 2.10 pp. 110 i bogen for bedring af forståelse.
+\begin{frame}
+	\frametitle{CFG Konverting Eksempel}
+	Vi kigger på eksempel 2.10 pp. 110 i bogen for bedring af forståelse.
 \end{frame}
 
 \subsection{Pushdown Automater}%
