--- a/DM553/Slides/Question3.tex
+++ b/DM553/Slides/Question3.tex
@@ -115,7 +115,7 @@ Vi siger at et sprog er \textit{Turing-afgørligt} eller \textit{afgørligt} hvi
   \end{definition}
 
   \begin{itemize}
-Det her kursus omhandler ikke Turingmaskinekonstruktion, så vi hopper over eksemplerne på Turingmaskiner.
+\item Det her kursus omhandler ikke Turingmaskinekonstruktion, så vi hopper over eksemplerne på Turingmaskiner.
   \end{itemize}
 \end{frame}
 
